# LenovoCodeDRJ_CLang

./: .gitignore  AnalyzerRules.md  INSTALL_WINDOWS.md  LenovoDRJ_CLang.sln  README.md
.github/workflows/: build-test.yml  docs-deploy.yml  extension-build.yml  lsp-build.yml  release.yml
LenovoTidyChecks/: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  mkdocs.yml
LenovoTidyChecks/ci/: Dockerfile.dev
LenovoTidyChecks/ci/github-actions/: build-test.yml  docs-deploy.yml  extension-package.yml  lsp-build.yml  release.yml
LenovoTidyChecks/cmake/: CompilerOptions.cmake  FindLLVMDev.cmake
LenovoTidyChecks/docs/: architecture.md  ci-integration.md  development-guide.md  index.md  lsp-server.md  mkdocs.yml  tdd-workflow.md
LenovoTidyChecks/docs/adr/: 0001-lsp-rust.md  0002-skip-dll002-sec009.md
LenovoTidyChecks/docs/ide-integration/: visual-studio.md  vscode.md
LenovoTidyChecks/docs/rules/: chn001.md  code001.md  dll003.md  exc001.md  name001.md  sec001.md  sec002.md  sec003.md  sec004.md  sec005.md  sec006.md  sec007.md  sec008.md  sec010.md  sec011.md
LenovoTidyChecks/examples/demo-project/: .clang-tidy  CMakeLists.txt  README.md
LenovoTidyChecks/examples/demo-project/src/: demo.cpp  demo_ok.cpp
LenovoTidyChecks/scripts/: generate_rules_index.py  new_check.py  run-tests.sh
LenovoTidyChecks/src/LenovoTidyMain/: CMakeLists.txt  main.cpp
LenovoTidyChecks/src/LenovoTidyMain/include/: clang-tidy-config.h
LenovoTidyChecks/src/LenovoTidyModule/: CMakeLists.txt  LenovoTidyModule.cpp
LenovoTidyChecks/src/LenovoTidyModule/common/: AstUtils.cpp  AstUtils.h  OptionParser.cpp  OptionParser.h  StringUtils.cpp  StringUtils.h
LenovoTidyChecks/src/LenovoTidyModule/localization/: ChineseInCommentsCheck.cpp  ChineseInCommentsCheck.h
LenovoTidyChecks/src/LenovoTidyModule/maintainability/: CommentedOutCodeCheck.cpp  CommentedOutCodeCheck.h
LenovoTidyChecks/src/LenovoTidyModule/naming/: NamingConventionCheck.cpp  NamingConventionCheck.h
LenovoTidyChecks/src/LenovoTidyModule/reliability/: StackTraceInCatchCheck.cpp  StackTraceInCatchCheck.h
LenovoTidyChecks/src/LenovoTidyModule/security/: HardcodedSensitiveInfoCheck.cpp  HardcodedSensitiveInfoCheck.h  InsecureIpcCheck.cpp  InsecureIpcCheck.h  InsecureRandomCheck.cpp  InsecureRandomCheck.h  InsecureTempFileCheck.cpp  InsecureTempFileCheck.h  PathTraversalCheck.cpp  PathTraversalCheck.h  RaceConditionCheck.cpp  RaceConditionCheck.h  RegexDosCheck.cpp  RegexDosCheck.h  ResourceLeakCheck.cpp  ResourceLeakCheck.h  SqlInjectionCheck.cpp  SqlInjectionCheck.h  UnsafeDeserializationCheck.cpp  UnsafeDeserializationCheck.h  UnsafeDllLoadCheck.cpp  UnsafeDllLoadCheck.h
LenovoTidyChecks/tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
LenovoTidyChecks/tests/checkers/chn001-chinese-comments/: block-comment.cpp  line-comment.cpp  valid.cpp
LenovoTidyChecks/tests/checkers/code001-commented-out-code/: code-in-comment.cpp  valid.cpp
LenovoTidyChecks/tests/checkers/dll003-unsafe-dll-load/: loadlibrary.cpp  valid.cpp
LenovoTidyChecks/tests/checkers/exc001-stack-trace-in-catch/: print-trace.cpp  valid.cpp
LenovoTidyChecks/tests/checkers/name001-naming/: class-pascal.cpp  constant-upper.cpp  function-camel.cpp  interface-prefix.cpp  valid.cpp
LenovoTidyChecks/tests/checkers/sec001-hardcoded-sensitive/: apikey.cpp  password.cpp  valid.cpp
LenovoTidyChecks/tests/checkers/sec002-path-traversal/: unsafe-concat.cpp  valid.cpp
LenovoTidyChecks/tests/checkers/sec003-sql-injection/: concat-select.cpp  valid.cpp
LenovoTidyChecks/tests/checkers/sec004-unsafe-deserialization/: boost.cpp  valid.cpp
LenovoTidyChecks/tests/checkers/sec005-insecure-random/: rand-calls.cpp  valid.cpp
LenovoTidyChecks/tests/checkers/sec006-regex-dos/: regex-construct.cpp  valid.cpp
LenovoTidyChecks/tests/checkers/sec007-resource-leak/: file-no-fclose.cpp  raw-new.cpp  valid.cpp
LenovoTidyChecks/tests/checkers/sec008-insecure-temp/: calls.cpp  valid.cpp
LenovoTidyChecks/tests/checkers/sec010-race-condition/: global-mutable.cpp  valid.cpp
LenovoTidyChecks/tests/checkers/sec011-insecure-ipc/: grpc.cpp  valid.cpp
LenovoTidyChecks/tests/unit/: CMakeLists.txt  NamingConventionHelperTest.cpp  StringUtilsTest.cpp
LenovoTidyLsp/: .gitignore  Cargo.toml  README.md
LenovoTidyLsp/src/: config.rs  diagnostic.rs  discovery.rs  driver.rs  main.rs  parser.rs  server.rs
LenovoTidyLsp/tests/: parser_test.rs
LenovoTidyLsp/tests/fixtures/: violations.cpp
LenovoTidyVs2022/: .gitignore  LICENSE.txt  LenovoTidy.csproj  LspClient.cs  README.md  source.extension.vsixmanifest
LenovoTidyVscode/: .gitignore  .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
LenovoTidyVscode/src/: extension.ts
windows-build/: build-checks.ps1  build-lsp.ps1  build-vs2022.ps1  build-vscode.ps1  diagnose-deeper.ps1  diagnose-vs2022.ps1  helpers.ps1  install-llvm-dev.ps1  install-prereqs.ps1  install-rust.ps1  repackage-vs2022-vsix.ps1  run-elevated-prereqs.ps1  smoke-activate.ps1  smoke-test.cpp  verify-vs2022-host.ps1  verify.ps1
